@@ -1,5 +1,9 @@
 0.1.24
 
+2016-05-25  Brecht Sanders  <brechtsanders@users.sourceforge.net>
+
+	* fixed date issue if locale is not English (thanks to Fulvio Senore)
+
 2016-05-19  Brecht Sanders  <brechtsanders@users.sourceforge.net>
 
 	* fixed daylight saving time issue on Windows (thanks to Fulvio Senore)
